Project nexus_evolucao {
  database_type: 'PostgreSQL'
  Note: 'DER resumido: compras, pagamentos e reserva de chaves. Os demais campos e tabelas do projeto continuam preservados.'
}

// Cinza: tabela existente. Azul: tabela ou fluxo ampliado. Verde: nova tabela.
Table users [headercolor: #64748B] {
  id integer [pk, increment]
  full_name varchar(255)
  email varchar(255) [not null, unique]
  created_at timestamptz [not null]
}

Table games [headercolor: #64748B] {
  id integer [pk, increment]
  title varchar(255) [not null]
}

Table game_platform_listings [headercolor: #64748B] {
  id integer [pk, increment]
  game_id integer [not null]
  price decimal(10,2) [not null]
  Note: 'Oferta de um jogo. O vínculo existente com a plataforma foi omitido deste recorte.'
}

Table orders [headercolor: #2563EB] {
  id integer [pk, increment]
  order_number varchar(50) [not null, unique]
  user_id integer [not null]
  total_amount decimal(10,2) [not null]
  status varchar(20) [not null, note: 'Pendente, pago, cancelado, expirado ou estornado.']
  created_at timestamptz [not null]
  Note: 'Campos existentes. A evolução altera o fluxo: o pedido só será pago após confirmação do gateway.'
}

Table order_items [headercolor: #64748B] {
  id integer [pk, increment]
  order_id integer [not null]
  listing_id integer [not null]
  game_key_id integer [unique, note: 'Campo existente. Preenchido na entrega; permanece vazio durante a reserva.']
  price decimal(10,2) [not null]
  Note: 'Uma linha por unidade comprada. Cada chave pode ser entregue a somente um item.'
}

Table game_keys [headercolor: #2563EB] {
  id integer [pk, increment]
  listing_id integer [not null]
  key_value varchar(255) [not null, unique]
  status varchar(20) [not null, default: 'available', note: 'available: disponível; reserved: reservada; sold: vendida.']
  reserved_at timestamptz
  reserved_order_id integer [note: 'NOVO. Pedido responsável pela reserva ativa.']
  reservation_expires_at timestamptz [note: 'NOVO. Prazo da reserva conforme o método de pagamento.']
  Note: 'EXISTENTE, ampliada com pedido e prazo da reserva. Após pagamento e entrega, passa para sold. Após cancelamento ou expiração confirmados, volta para available. Limpar os campos de reserva ao encerrá-la. Demais campos existentes preservados.'
}

Table payments [headercolor: #15803D] {
  id integer [pk, increment]
  order_id integer [not null]
  provider varchar(50) [not null]
  provider_payment_id varchar(255)
  method varchar(30) [not null, note: 'Cartão de crédito, Pix ou boleto.']
  amount decimal(10,2) [not null]
  status varchar(30) [not null, note: 'Pendente, aprovado, recusado, cancelado, expirado ou estornado.']
  confirmed_at timestamptz
  refunded_at timestamptz
  indexes { (provider, provider_payment_id) [unique] }
  Note: 'NOVA. Uma linha por tentativa de pagamento. Estorno integral: amount indica o valor devolvido e refunded_at registra a confirmação. Não armazena dados de cartão.'
}

Ref: orders.user_id > users.id
Ref: order_items.order_id > orders.id
Ref: order_items.listing_id > game_platform_listings.id
Ref: game_platform_listings.game_id > games.id
Ref: payments.order_id > orders.id
Ref: game_keys.listing_id > game_platform_listings.id
Ref: game_keys.reserved_order_id > orders.id
Ref: game_keys.id - order_items.game_key_id
